testsuite/tests/parser/should_fail/pfail048.alan
tab_count() : proc
	i : int;
{
	$ i = 42; $

      @	i = 42;	@
	}
